--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
-body{
-    background: black;
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000;
 }
-
-H1 {
-    color: azure;
+#background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
