--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('./../foto\'s/login.jpg');
+    background-image: url('./../foto\'s/login1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -14,14 +14,14 @@ body {
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 2px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 label {
     display: block;
     margin-bottom: 10px;
 }
-input[type="text"], input[type="password"] {
+input[type="text"]{
     width: 75%;
     padding: 10px;
     margin-bottom: 15px;
