--- a/css/contact.css
+++ b/css/contact.css
@@ -1,12 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('./../foto\'s/login1.jpg');
+    background-image: url('./../foto`s/login1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 0;
 }
 .container {
@@ -14,14 +13,14 @@ body {
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid #ccc;
-    border-radius: 2px;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 label {
     display: block;
     margin-bottom: 10px;
 }
-input[type="text"]{
+input[type="text"], input[type="password"] {
     width: 75%;
     padding: 10px;
     margin-bottom: 15px;
