--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,35 @@
 body {
+    font-family: Arial, sans-serif;
+    background-image: url('/foto`s/foto.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
     margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #000;
 }
 H1{
     color: aliceblue;
 }
-#background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+header {
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    transform: translateY(-100%);
+    transition: opacity 1s ease, transform 1s ease;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 18px;
 }
