--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('./..//foto`s/foto.jpg');
+    background-image: url('./../foto`s/foto.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
